added consistency and minor stuff