@@ -17,14 +17,17 @@ package org.openmolecules.comm;
 import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.net.*;
+import java.nio.charset.StandardCharsets;
 
 public abstract class ClientCommunicator extends CommunicationHelper {
 	private static final int CONNECT_TIME_OUT = 5000;
 	private static final int READ_TIME_OUT = 600000;
 
-    private boolean	mWithSessions;
+    private final boolean	mWithSessions;
+	private boolean mUsePostMethod;
 	private int mConnectTimeOut,mReadTimeOut;
-	private String	mSessionID,mSessionServerURL,mAppicationName;
+	private String	mSessionID,mSessionServerURL;
+	private final String mAppicationName;
 
 	public abstract String getPrimaryServerURL();
 
@@ -54,6 +57,7 @@ public abstract class ClientCommunicator extends CommunicationHelper {
 		mAppicationName = (applicationName == null) ? "unknown" : applicationName;
 		mConnectTimeOut = CONNECT_TIME_OUT;
 		mReadTimeOut = READ_TIME_OUT;
+		mUsePostMethod = true;    // this is the default
 		}
 
 	public void setConnectTimeOut(int timeOut) {
@@ -64,45 +68,56 @@ public abstract class ClientCommunicator extends CommunicationHelper {
 		mReadTimeOut = timeOut;
 	}
 
+	public void setUsePostMethod(boolean usePost) {
+		mUsePostMethod = usePost;
+		}
+
 	private URLConnection getConnection(String serverURL) throws IOException {
-        URL urlServlet = new URL(serverURL);
-        HttpURLConnection con = (HttpURLConnection)urlServlet.openConnection();
-    
-        // konfigurieren
-        con.setDoInput(true);
-        con.setDoOutput(true);
-        con.setUseCaches(false);
-		con.setConnectTimeout(mConnectTimeOut);
-		con.setReadTimeout(mReadTimeOut);
-        con.setRequestProperty("User-Agent", "Mozilla/5.0");
-        con.setRequestProperty("Content-Type", "application/x-java-serialized-object");
+		try {
+			URL urlServlet = new URI(serverURL).toURL();
+			HttpURLConnection con = (HttpURLConnection)urlServlet.openConnection();
 
-        if (mWithSessions && mSessionID != null)
-            con.addRequestProperty(KEY_SESSION_ID, mSessionID);
+			// konfigurieren
+			con.setDoInput(true);
+			con.setDoOutput(true);
+			con.setUseCaches(false);
+			con.setConnectTimeout(mConnectTimeOut);
+			con.setReadTimeout(mReadTimeOut);
+			con.setRequestProperty("User-Agent", "Mozilla/5.0");
+			con.setRequestProperty("Content-Type", "application/x-java-serialized-object");
 
-        return con;
+			if (mWithSessions && mSessionID != null)
+				con.addRequestProperty(KEY_SESSION_ID, mSessionID);
+
+			return con;
+			}
+		catch (URISyntaxException use) {
+			return null;
+			}
         }
 
 	private void convertToPostRequest(HttpURLConnection con, String request, String... keyValuePair) throws IOException {
 		StringBuilder postData = new StringBuilder();
 
-		postData.append(URLEncoder.encode(KEY_REQUEST, "UTF-8"));
+		postData.append(URLEncoder.encode(KEY_REQUEST, StandardCharsets.UTF_8));
 		postData.append('=');
-		postData.append(URLEncoder.encode(request, "UTF-8"));
+		postData.append(URLEncoder.encode(request, StandardCharsets.UTF_8));
 
 		postData.append('&');
-		postData.append(URLEncoder.encode(KEY_APP_NAME, "UTF-8"));
+		postData.append(URLEncoder.encode(KEY_APP_NAME, StandardCharsets.UTF_8));
 		postData.append('=');
-		postData.append(URLEncoder.encode(mAppicationName, "UTF-8"));
+		postData.append(URLEncoder.encode(mAppicationName, StandardCharsets.UTF_8));
 
-		for (int i=0; i<keyValuePair.length; i+=2) {
-			postData.append('&');
-			postData.append(URLEncoder.encode(keyValuePair[i], "UTF-8"));
-			postData.append('=');
-			postData.append(URLEncoder.encode(String.valueOf(keyValuePair[i+1]), "UTF-8"));
+		if (keyValuePair != null) {
+			for (int i=0; i<keyValuePair.length; i+=2) {
+				postData.append('&');
+				postData.append(URLEncoder.encode(keyValuePair[i], StandardCharsets.UTF_8));
+				postData.append('=');
+				postData.append(URLEncoder.encode(String.valueOf(keyValuePair[i+1]), StandardCharsets.UTF_8));
+				}
 			}
 
-		byte[] postDataBytes = postData.toString().getBytes("UTF-8");
+		byte[] postDataBytes = postData.toString().getBytes(StandardCharsets.UTF_8);
 
 		con.setRequestMethod("POST");
 		con.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
@@ -124,7 +139,7 @@ public abstract class ClientCommunicator extends CommunicationHelper {
             sb.append(new String(buf, 0, size));
             }
 
-        return sb.length() != 0 ? sb.toString() : null;
+        return !sb.isEmpty() ? sb.toString() : null;
         }
 
     public void closeConnection() {
@@ -165,17 +180,37 @@ public abstract class ClientCommunicator extends CommunicationHelper {
 	 * then the secondary server is contacted and in case of a successful completion
 	 * used for further getResponse() calls. In case of connection problems or other
 	 * errors a proper error message is shown through showErrorMessage().
+	 * Different from getResponse() this method does not decode the original result,
+	 * it just returns the body of the HTML result.
+	 * @param request
+	 * @param keyValuePair
+	 * @return null in case of any error
+	 */
+	public String getPlainResponse(String request, String... keyValuePair) {
+		return (String)getResponse(request, true, keyValuePair);
+		}
+
+	/**
+	 * Tries to get a proper response or search result from the primary server.
+	 * If the primary server cannot be contacted and a secondary server exists,
+	 * then the secondary server is contacted and in case of a successful completion
+	 * used for further getResponse() calls. In case of connection problems or other
+	 * errors a proper error message is shown through showErrorMessage().
 	 * @param request
 	 * @param keyValuePair
 	 * @return null in case of any error
 	 */
 	public Object getResponse(String request, String... keyValuePair) {
+		return getResponse(request, false, keyValuePair);
+		}
+
+	private Object getResponse(String request, boolean plainResult, String... keyValuePair) {
 		boolean mayUseSecondaryServer = (getSecondaryServerURL() != null && mSessionServerURL == null);
 
 		if (!isUseSecondaryServer() || mSessionServerURL != null) {
 			try {
 				String url = (mSessionServerURL != null) ? mSessionServerURL : getPrimaryServerURL();
-				Object response = getResponseWithURL(url, request, keyValuePair);
+				Object response = getResponseWithURL(url, request, plainResult, keyValuePair);
 				if (response != null)
 					return response;
 				}
@@ -209,7 +244,7 @@ public abstract class ClientCommunicator extends CommunicationHelper {
 
 		if (mayUseSecondaryServer) {
 			try {
-				Object response = getResponseWithURL(getSecondaryServerURL(), request, keyValuePair);
+				Object response = getResponseWithURL(getSecondaryServerURL(), request, plainResult, keyValuePair);
 				if (response != null) {
 					setUseSecondaryServer();
 					return response;
@@ -232,7 +267,7 @@ public abstract class ClientCommunicator extends CommunicationHelper {
 	 */
 	public void reportException(Exception e) {}
 
-	public Object getResponseWithURL(String serverURL, String request, String... keyValuePair) throws IOException {
+	private Object getResponseWithURL(String serverURL, String request, boolean plainResponse, String... keyValuePair) throws IOException {
 		if (mWithSessions && mSessionID == null) {
 			getNewSession();
 			if (mSessionID == null)
@@ -242,16 +277,18 @@ public abstract class ClientCommunicator extends CommunicationHelper {
 		showBusyMessage("Requesting data ...");
         URLConnection con = getConnection(serverURL);
 
-// The default is a GET request, which is limited on Apache to 8700 characters.
-// As long as we use Apache as entry door to distribute our requests to virtual
-// servers, this may be a problem.
-        convertToPostRequest((HttpURLConnection)con, request, keyValuePair);
-
-// This would add the key value pairs as GET request params
-//	        con.addRequestProperty(KEY_REQUEST, request);
-// 	        con.addRequestProperty(KEY_APP_NAME, mApplicationName);
-//          for (int i=0; i<keyValuePair.length; i+=2)
-//          	con.addRequestProperty(keyValuePair[i], keyValuePair[i+1]);
+		if (mUsePostMethod) {
+			// The default is a GET request, which is limited on Apache to 8700 characters.
+			// As long as we use Apache as entry door to distribute our requests to virtual
+			// servers, this may be a problem.
+			convertToPostRequest((HttpURLConnection)con, request, keyValuePair);
+			}
+		else {
+			con.addRequestProperty(KEY_REQUEST, request);
+			con.addRequestProperty(KEY_APP_NAME, mAppicationName);
+			for (int i = 0; i<keyValuePair.length; i += 2)
+				con.addRequestProperty(keyValuePair[i], keyValuePair[i + 1]);
+			}
 
         String response = getResponse(con);
 
@@ -262,10 +299,14 @@ public abstract class ClientCommunicator extends CommunicationHelper {
 
 		if (response == null)
         	return null;
+		else if (plainResponse)
+			return response;
 		else if (response.startsWith(BODY_MESSAGE))
 			return response.substring(BODY_MESSAGE.length() + 1);
         else if (response.startsWith(BODY_OBJECT))
 	        return decode(response.substring(BODY_OBJECT.length() + 1));
+		else if (response.startsWith("SERVER_MESSAGE"))    // rest server prefix, e.g. hyperspace server
+			return response.substring("SERVER_MESSAGE".length() + 1);
 		else if (response.startsWith(BODY_ERROR))
 			throw new ServerErrorException(response);
         else
